payment-service: update payment service implementation