@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -61,7 +60,7 @@ public class PaymentServiceImpl implements PaymentService {
         return paymentRepository.findAll()
                 .stream()
                 .map(paymentMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -150,7 +149,7 @@ public class PaymentServiceImpl implements PaymentService {
         return paymentRepository.findByUserId(userId)
                 .stream()
                 .map(paymentMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -159,6 +158,6 @@ public class PaymentServiceImpl implements PaymentService {
         return paymentRepository.findByRideId(rideId)
                 .stream()
                 .map(paymentMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
